--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,27 @@
 <resources>
     <string name="app_name">Composition</string>
+    <string name="question_mark">\?</string>
+    <string name="welcome_title">Склад числа</string>
+    <string name="game_rules">
+        Правила гри: перед вами буде три фігури, дві знизу та одна зверху, у двох із них будуть
+        числа. Необхідно, щоб сума чисел з двох нижніх фігур дорівнювала числу у верхній фігурі,
+        для цього потрібно вставити недостатнє число.\n\nПриклад: у верхньому колі число 7, в одному
+        з нижніх знак питання, а в іншому число 4. Значить на місці знака питання
+        бути число 3, тому що 3 + 4 = 7
+    </string>
+    <string name="button_understand">Зрозуміло</string>
+    <string name="welcome_logo">Welcome logo</string>
+    <string name="choose_level_title">Виберіть рівень:</string>
+    <string name="easy_level">Легкий</string>
+    <string name="normal_level">Середній</string>
+    <string name="hard_level">Важкий</string>
+    <string name="test_level">Тестовий</string>
+    <string name="game_over">Game Over</string>
+    <string name="score_answers">Ваш рахунок: %s</string>
+    <string name="score_percentage">Відсоток правильних відповідей: %s</string>
+    <string name="retry">Спробувати знову</string>
+    <string name="right_answers">Правильних відповідей %s із %s необхідних</string>
+    <string name="required_percentage">Необхідний відсоток правильних відповідей: %s</string>
+    <string name="required_score">Необхідна кількість правильних відповідей: %s</string>
+    <string name="progress_answers">Правильних відповідей %s (мінімум %s)</string>
 </resources>
